# open-logic

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  app.py  config.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: backend-ci.yml  release.yml
backend/: .dockerignore  Dockerfile  Procfile.runner  README.md  api_app.py  app.py  pyproject.toml  runner_app.py
backend/services/: sandbox.py
docs/: api.md  architecture.md  backend-setup.md
docs/deployment/vercel-split/: fly-runner-notes.md
frontend/src/app/courses/: page.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/post/[id]/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/components/: courses-view.tsx  create-form.tsx  post-detail-view.tsx  profile-view.tsx
frontend/src/lib/: app-origin.ts
routes/: runner_bp.py
static/js/: main.js
static/js/views/: post-create.js
tests/unit/: test_branding.py
