[project]
name = "open-logic-backend"
version = "0.1.0"
description = "Backend runtime for the Open Logic learning community."
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
